kubernetes/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: shoplite
spec:
  replicas: 2
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: frontend
          image: shibilbasith11/shoplite-admin:v1
          ports:
            - containerPort: 80
